# rust-microservice-template

./: .dockerignore  .editorconfig  .env  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml  flake.nix  schema.surql  trivy.yaml
protos/: authentication.service.proto  events.proto
src/: config.rs  lib.rs  main.rs  utils.rs
src/adapters/: grpc.rs  mod.rs  opentelemetry.rs
src/cmd/server/grpc/: main.rs
src/cmd/server/grpc/api/: api.rs
src/cmd/server/grpc/api/proto/: proto.rs  service.proto
src/domain/usecases/: mod.rs  start_registration.rs  verify_email.rs
src/observability/: observability.rs
tls/: certificate.pem  private-key.pem
