[package]
name = "rust-microservice-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-microservice-template-grpc-server"
path = "./src/cmd/server/grpc/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = "0.29.0"
opentelemetry-appender-tracing = { version = "0.29.0", features = ["log", "spec_unstable_logs_enabled"] }
opentelemetry-otlp = { version = "0.29.0", features = [
  "grpc-tonic",
  "gzip-tonic",
] }
opentelemetry_sdk = "0.29.0"
prost = "0.13.5"
tokio = { version = "1.44.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tonic = { version = "0.12.3", features = ["gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3"
